# awesome-python

./: .gitignore  README.md
examples/gradio/: 05_block_flipper.py  pyproject.toml
python_tools/: audio_craweler.py
python_tools/photography_materials_organizer/: .gitignore  FILES.md  MIGRATION_TO_UV.md  PRESET_UPDATE_NOTES.md  QUICKSTART.md  README.md  README_UI.md  SUMMARY.md  UV_GUIDE.md  demo.py  presets.json  pyproject.toml  requirements.txt  start_ui.sh  video_organizer.py  video_organizer_ui.py
python_tools/photography_materials_organizer/photography_organizer_mac/: README.md  pubspec.yaml
python_tools/photography_materials_organizer/photography_organizer_mac/lib/: app_theme.dart  home_page.dart  main.dart  organizer.dart  preset_manager.dart
python_tools/photography_materials_organizer/photography_organizer_mac/macos/Runner/: DebugProfile.entitlements  Release.entitlements
python_tools/photography_materials_organizer/photography_organizer_mac/macos/Runner.xcodeproj/: project.pbxproj
python_tools/photography_materials_organizer/photography_organizer_mac/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
python_tools/photography_materials_organizer/photography_organizer_mac/macos/Runner/Configs/: AppInfo.xcconfig
python_tools/photography_materials_organizer/photography_organizer_mac/test/: widget_test.dart
web/fastapi/: main.py  pyproject.toml
web/fastapi/tests/: test_fastapi_with_cyac.py
