[tool.poetry]
name = "fastapi_with_cyac"
version = "0.1.0"
description = ""
authors = ["MrJStyle <438747096lmz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cython = "*"
cyac = "1.5"
fastapi = "~0.65.0"
gunicorn = "~20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
